[MODORDERS-1365] Fix logic to accumulate results and update tests